salesforce/force-app/main/default/objects/Contract/fields/Renewal_Error__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Error__c</fullName>
    <label>Renewal Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>