salesforce/force-app/main/default/objects/Contract/fields/Renewal_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Product_Group__c</fullName>
    <label>Renewal Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UpToDate</fullName>
            </value>
            <value>
                <fullName>MediSpan</fullName>
            </value>
            <value>
                <fullName>MediSpan_Lexicomp</fullName>
                <label>MediSpan + Lexicomp</label>
            </value>
            <value>
                <fullName>Emmi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>