salesforce/force-app/main/default/objects/Contract/fields/Renewal_Segment__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Segment__c</fullName>
    <label>Renewal Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>